<resources>
    <string name="app_name">Tweet Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="queryPrompt">Enter Twitter search query here</string>
    <string name="tagPrompt">Tag your query</string>
    <string name="save">Save</string>
    <string name="taggedSearches">Tagged Searches</string>
    <string name="clearTags">Clear Tags</string>
    <string name="missingTitle">Missing Text</string>
    <string name="OK">OK</string>
    <string name="missingMessage">Please enter a search query and tag it.</string>
    <string name="confirmTitle">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="erase">Erase</string>
    <string name="confirmMessage">This will delete all saved searches</string>
    <string name="searchURL">http://search.twitter.com/search?q=</string>
    <string name="edit">Edit</string>
</resources>
