<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:padding="10dp"
    android:stretchColumns="*"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tweet_Search">

    <!-- tableRow0 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/queryEditText"
            android:layout_column="0"
            android:layout_span="2"
            android:inputType="text"
            android:hint="@string/queryPrompt" />
    </TableRow>

    <!-- tableRow1 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tagEditText"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_column="0"
            android:hint="@string/tagPrompt"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:layout_gravity="center_vertical"
            android:layout_column="1" />
    </TableRow>

    <!-- tableRow2 -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow2"
        android:background="@color/light_orange">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/taggedSearches"
            android:padding="5dp"
            android:id="@+id/taggedSearchesTextView"
            android:layout_column="0" />
    </TableRow>

    <!-- tableRow3 -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3"
        android:background="@color/light_orange">

        <ScrollView
            android:id="@+id/queryScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:padding="5dp">

            <TableLayout
                android:id="@+id/queryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:stretchColumns="*">
            </TableLayout>
        </ScrollView>
    </TableRow>

    <!-- tableRow4 -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearTags"
            android:id="@+id/clearTagsButton"
            android:layout_span="2"
            android:layout_marginTop="5dp"
            android:layout_column="0" />
    </TableRow>


</TableLayout>
